<resources>
    <string name="ambilwarna_cancel">Cancel</string>
    <string name="ambilwarna_ok">OK</string>
    <string name="app_name">Zeth</string>
    <string name="back_to_game">Back to game</string>
    <string name="new_game">New game</string>
    <string name="menu_end_game">End game</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>
    <string name="cards_remaining">%d cards remaining</string>
    <string name="end_game_over">Game Over</string>
    <string name="end_statistics">Statistics</string>
    <string name="default_colors">Default colors</string>
    <string name="end_label_elapsed">Time elapsed:</string>
    <string name="end_value_elapsed">%d %s</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="end_label_fastest">Fastest game:</string>
    <string name="end_value_fastest">%d seconds</string>
    <string name="end_label_average">Average game:</string>
    <string name="end_value_average">%.2f seconds</string>
    <string name="end_label_sets_found">Sets found:</string>
    <string name="end_label_errors">Errors:</string>
    <string name="end_label_games_played">Total games played:</string>
    <string name="end_label_sets_all_time">Sets found all time:</string>
    <string name="end_label_errors_all_time">Errors all time:</string>
    <string name="end_label_playing_time">Total playing time:</string>
    <string name="end_value_playing_time">%02d:%02d:%02d</string>
    <string name="show_hint_button">Show hint button</string>
    <string name="auto_deal">Deal new cards when there are no sets shown</string>
    <string name="animate_new_cards">Animate new cards</string>
    <string name="vibrate_on_toggle">Vibrate when selecting cards</string>
    <string name="vibrate_on_error">Vibrate on errors</string>
    <string name="hint">Hint</string>
    <string name="cheater">* Games where you use the hint button don\'t count toward your best or average time.</string>
    <string name="plus3">+3</string>
    <string name="help_text">Welcome to Zeth. &lt;p&gt; In this app, you play against the clock---how fast can you find all the sets in the deck? When you find a set, simply tap the three cards, and the game will deal out three more. If you tap a card you didn\'t intend to, just tap it again to deselect it. When you have found all the sets, you\'ll see how long your game took, along with your best and average game times since you installed the app. &lt;p&gt; From inside the game, you can get back to this help screen, or to the preferences screen, by clicking the menu button at the top right corner of your screen. &lt;p&gt; By default, the app will automatically deal you more cards if there are no sets visible. If you don\'t like this behavior, disable it in the preferences, and you\'ll get a &quot;+3&quot; button instead, which you can use when you determine there are no sets visible. If you use the &quot;+3&quot; button when there actually are sets visible, the app will buzz and refuse to deal additional cards---keep looking! &lt;p&gt; If you are a new player, you may find the &quot;Hint&quot; button useful. You must first enable it in the preferences. Any time you use it, the app will switch to &quot;training&quot; mode: the game background will turn brown, and your game time will not count toward your average or best times. &lt;p&gt; If you don\'t like my color choices, use the color selectors in the preferences to pick other colors. I\'m told that black, orange, and blue work especially well for people who are red-green colorblind. &lt;p&gt; If you are especially concerned about battery usage, you can disable the animations when new cards are dealt. Again, just look in the preferences. &lt;p&gt; I hope you like the game!</string>
    <string name="loading">Loading…</string>
</resources>
