<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202040"
    android:orientation="vertical"
    android:padding="8px">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/color1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:padding="4sp"
                    android:text="Color 1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/color2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:padding="4sp"
                    android:text="Color 2"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/color3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:padding="4sp"
                    android:text="Color 3"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/color4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:padding="4sp"
                    android:text="Color 4"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/default_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_colors" />

            <CheckBox
                android:id="@+id/show_hint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/show_hint_button" />

            <CheckBox
                android:id="@+id/auto_deal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_deal" />

            <CheckBox
                android:id="@+id/animate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animate_new_cards" />

            <CheckBox
                android:id="@+id/vibrate_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_on_toggle" />

            <CheckBox
                android:id="@+id/vibrate_error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_on_error" />

            <Button
                android:id="@+id/back_to_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="back to game" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
